kubernetes/policies/base/network/apps-llama-cpp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: llama-cpp
  namespace: llm
spec:
  endpointSelector:
    matchLabels:
      app: llama-cpp
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: open-webui
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: model-downloader
  namespace: llm
spec:
  endpointSelector:
    matchLabels:
      app: model-downloader
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
