kubernetes/policies/base/network/apps-yk-portfolio.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: yk-portfolio
  namespace: yk-portfolio
spec:
  description: "Allow yk-portfolio to receive traffic from the gateway and cluster"
  endpointSelector:
    matchLabels:
      app: yk-portfolio
  ingress:
    - fromEntities:
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
