kubernetes/policies/base/network/platform-democratic-csi-nfs.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi-nfs-controller
  namespace: democratic-csi-nfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller-linux
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi-nfs-node
  namespace: democratic-csi-nfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: node-linux
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
