kubernetes/policies/base/network/platform-yk-dns-manager.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: yk-dns-manager
  namespace: yk-dns-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: yk-dns-manager
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 10.0.0.0/8
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
